--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 .home.text-center {
     margin: 0;
     padding: 0;
-    background-image: url("https://www.xtrafondos.com/wallpapers/stormtrooper-star-wars-1629.jpg");
+    background-image: url("https://www.wallpaperuse.com/wallp/0-4408_m.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
