--- a/src/styles/FavoritesDropdown.css
+++ b/src/styles/FavoritesDropdown.css
@@ -14,6 +14,8 @@
     display: flex;
     align-items: center;
     margin-right: 10px;
+    color: rgb(231 227 40);
+    cursor: pointer;
 }
 
 span {
